--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,4 +13,5 @@ jobs:
 
     - name: Run tests
       run:
-        echo "All is well"
+        # test is failing
+        echo "All is not so well" && exit 1
