Deploy only after succesful test AND a pushed tag. #3

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,13 +1,12 @@
 name: "Build and publish package"
 
 on:
-  # push
-  #   # tags:
-  #   #   - '*'
   workflow_run:
     workflows: [Run tests]
     types:
       - completed
+    tags:
+      - '*'
 
 jobs:
   build:
