Fail the test , and tag it

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -14,4 +14,5 @@ jobs:
 
     - name: Run simple test
       run:
-        echo "All is well"
+        # fail the test
+        echo "All is not so well" && exit 1
