--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,12 +6,13 @@ on:
       - '*'
 
 jobs:
-  tests:
+  tests-before-build:
     uses: ./.github/workflows/test.yaml
+
   build:
     name: "Build package"
     runs-on: ubuntu-latest
-    needs: tests
+    needs: tests-before-build
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
