Now we are ready to release a tested build

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,14 +6,14 @@ on:
       - '*'
 
 jobs:
-  tests-before-build:
-    name: Pre-build tests
+  pre-build-checks:
+    name: Pre-build checks
     uses: ./.github/workflows/test.yaml
 
   build:
     name: "Build package"
     runs-on: ubuntu-latest
-    needs: tests-before-build
+    needs: pre-build-checks
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
